--- a/VitoCarApi/src/main/resources/application.properties
+++ b/VitoCarApi/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/VitoCar
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
